aks-cluster/02-Ingress/kube-manifests/01-DemoApp-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: nasserahmad/nginxdemo:latest
          ports:
            - containerPort: 80
